--- a/components/userPreviewPage/userPreviewPage.html
+++ b/components/userPreviewPage/userPreviewPage.html
@@ -1,12 +1,13 @@
 <template name="userPreviewPage">
   <div id="userPreviewPage" class="fullheight padded page">
-    <header class="pageHeader">
+    <!-- <header class="pageHeader">
       <i class="indexButton fa fa-chevron-left"></i>
       <h4 class="userId barcode">{{_id}}</h4>
       <i class="imageGridButton fa fa-th"></i>
       <i class="listButton fa fa-list"></i>
       <i class="tableButton fa fa-table"></i>
-    </header>
+    </header> -->
+    {{> recordHeader type="record" url="users" spreadsheet=false  imageGrid=false}}
 
       <div id="userPreviewCard" class="card-contents">
         <h2 id="userfullNameText">{{profile.name}}</h2>
