--- a/components/userEditPage/userEditPage.html
+++ b/components/userEditPage/userEditPage.html
@@ -1,12 +1,13 @@
 <template name="userEditPage">
   <div id="userEditPage" class="page">
-    <header class="pageHeader">
+    <!-- <header class="pageHeader">
       <i class="indexButton fa fa-chevron-left"></i>
       <h4 class="userId barcode">{{_id}}</h4>
       <i class="imageGridButton fa fa-th"></i>
       <i class="listButton fa fa-list"></i>
       <i class="tableButton fa fa-table"></i>
-    </header>
+    </header> -->
+    {{> recordHeader type="record" url="users" spreadsheet=false  imageGrid=false}}
 
     <div id="userEditCard" class="card-contents">
       <input id="usernameInput" class="glass form-control" type="text" placeholder="Title" value="{{title}}"><br>
@@ -14,8 +15,9 @@
       <textarea id="userFullNameInput"  class="glass form-control" rows="10" placeholder="Lorem ipsum dolar set et...">{{description}}</textarea><br>
     </div>
 
-    <div class="pageFooter">
+    <!-- <div class="pageFooter">
       <button id="editRecordButton" class="glass-footer-btn">Save Record</button>
-    </div>
+    </div> -->
+    {{> recordFooter }}
   </div>
 </template>
