--- a/components/userImageGridPage/userImageGridPage.html
+++ b/components/userImageGridPage/userImageGridPage.html
@@ -1,22 +1,21 @@
 <template name="userImageGridPage">
   <article id="userImageGridPage" class="page">
     {{> recordHeader url="users" spreadsheet=false  imageGrid=false}}
+    <div class="card-contents" style="{{getOpacity}}">
 
-    <input id="userSearchInput" type="text" class="glass fullwidth form-control" placeholder="search..." value="{{getRecordSearchFilter}}" />
+      <input id="userSearchInput" type="text" class="glass fullwidth form-control" placeholder="search..." value="{{getRecordSearchFilter}}" />
 
-    <ul id="userImageGrid">
-      {{#each lists}}
-        <li>
-          <img class="userImage" src="{{profile.avatar}}" />
+      <ul id="userImageGrid">
+        {{#each lists}}
+          <li>
+            <img class="userImage" src="{{profile.avatar}}" />
+          </li>
+        {{/each}}
+        <li id="addNewRecord" class="addNewRecord">
+            <img class="userImage" src="{{avatar}}" />
         </li>
-      {{/each}}
-      <li id="addNewRecord" class="addNewRecord">
-          <img class="userImage" src="{{avatar}}" />
-      </li>
-    </ul>
-    <!-- <footer class="pageFooter">
-      <h3 class="addRecordIcon"><i class="fa fa-sun-o"></i></h3>
-    </footer> -->
+      </ul>
+    </div>
     {{> recordFooter }}
   </article>
 </template>
