--- a/components/userPreviewPage/userPreviewPage.html
+++ b/components/userPreviewPage/userPreviewPage.html
@@ -1,15 +1,7 @@
 <template name="userPreviewPage">
   <div id="userPreviewPage" class="fullheight padded page">
-    <!-- <header class="pageHeader">
-      <i class="indexButton fa fa-chevron-left"></i>
-      <h4 class="userId barcode">{{_id}}</h4>
-      <i class="imageGridButton fa fa-th"></i>
-      <i class="listButton fa fa-list"></i>
-      <i class="tableButton fa fa-table"></i>
-    </header> -->
     {{> recordHeader type="record" url="users" spreadsheet=false  imageGrid=false}}
-
-      <div id="userPreviewCard" class="card-contents">
+      <div id="userPreviewCard" class="card-contents" style="{{getOpacity}}">
         <h2 id="userfullNameText">{{profile.name}}</h2>
         <p id="notesText">
           {{description}}
