user list changes; avatar images

--- a/client/components/usersTablePage/usersTablePage.html
+++ b/client/components/usersTablePage/usersTablePage.html
@@ -2,10 +2,10 @@
 <template name="usersTablePage">
   <article id="usersTablePage" style="{{getPageHeight}}">
     {{> recordHeader url="users" spreadsheet=false  imageGrid=false}}
-    <div class="horizontally-padded page" style={{getOpacity}}>
+    <div class="page" style={{getOpacity}}>
       <input id="userSearchInput" type="text" class="glass fullwidth form-control" placeholder="search..." value="{{getRecordSearchFilter}}" />
 
-      <table id="usersTable" class="table table-striped tablesorter">
+      <table id="usersTable">
         <thead>
           <tr class="userHeaderRow">
             <th>
