--- a/client/components/usersTablePage/usersTablePage.less
+++ b/client/components/usersTablePage/usersTablePage.less
@@ -7,13 +7,14 @@
     border-collapse: collapse;
   }
   th, td {
-     height: 30px;
-  }
-  tbody tr {
-     border-top: 1px solid black;
+    height: 30px;
+    border-top: none;
   }
   tbody tr:hover {
     background-color: #eeeeee;
+  }
+  td{
+    margin-top: 10px;
   }
   .gray{
     color: lightgray;
