--- a/client/components/usersListPage/usersListPage.html
+++ b/client/components/usersListPage/usersListPage.html
@@ -1,10 +1,11 @@
 
 <template name="usersListPage">
   <div id="usersListPage" class="page" style="{{getPageHeight}}">
-    {{> recordHeader url="users" spreadsheet=false  imageGrid=false}}
-    <div class="horizontally-padded page" style="{{getOpacityWithCorner}}">
-      <input id="userSearchInput" type="text" class="glass fullwidth form-control" placeholder="search..." value="{{getRecordSearchFilter}}" />
-      <ul id="usersUnorderedList">
+    <!-- {{> recordHeader url="users" spreadsheet=false  imageGrid=false}} -->
+    <div class="horizontally-padded" style="{{getOpacityWithCorner}}">
+      <input id="userSearchInput" type="text" class="glass fullwidth" placeholder="search users..." value="{{getRecordSearchFilter}}" />
+      <br><br>
+      <ul id="usersList">
         {{#if hasNoContent}}
           <li id="noResultsMessage" class="addRecordIcon">
             <article class="noResultsMessage">
@@ -14,19 +15,23 @@
           </li>
 
         {{else}}
+            <li class="userItem header">
+              <span class="avatar">Avatar</span>
+              <span class="fullName">Full Name</span>
+              <span class="role">Role</span>
+              <span class="right remove"></span>
+            </li>
           {{#each usersList}}
-            <li class="userItem">
-              <article>
-                <h2 class="fullNameText">{{profile.fullName}}</h2>
-                <span class="pull-right barcode gray idText">{{_id}}</span><br>
-                <span class="descriptionText">{{profile.description}}</span>
-              </article>
-              <div class="fadeAway"></div>
+            <li class="userItem user">
+              <span class="avatar">{{getAvatar}}</span>
+              <span class="fullName">{{profile.fullName}}</span>
+              <span class="role">{{role}}</span>
+              <span class="right remove"><i class="fa fa-times"></i></span>
             </li>
           {{/each}}
         {{/if}}
       </ul>
     </div>
-    {{> recordFooter }}
+    <!-- {{> recordFooter }} -->
   </div>
 </template>
