--- a/client/components/usersListPage/usersListPage.less
+++ b/client/components/usersListPage/usersListPage.less
@@ -3,15 +3,17 @@
     list-style-type: none;
   }
   li{
-    margin-top: 10px;
-    border-top: 1px solid gray;
-    padding-bottom: 20px;
-    min-height: 90px;
-    overflow-y: hidden;
-    padding: 0px;
-    position: relative;
-    text-align: justify;
-    text-overflow: ellipsis;
+    // margin-top: 10px;
+    // border-top: 1px solid gray;
+    // padding-bottom: 20px;
+    // min-height: 90px;
+    // overflow-y: hidden;
+    // padding: 0px;
+    // position: relative;
+    // text-align: justify;
+    // text-overflow: ellipsis;
+    border-top: 1px solid #f0f9fb;
+
 
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -24,26 +26,59 @@
       text-align: center;
     }
   }
-  li:hover{
-    color: maroon;
-    border-top: 1px solid maroon !important;
-    cursor: pointer;
-  }
 
-  li.usersUnorderedList.notificationHidden {
+
+  li.usersList.notificationHidden {
     display: none;
     visibility: visible;
   }
 
-  .pull-right{
-    position: absolute;
-    top: 0px;
-    right: 0px;
+  #userSearchInput{
+    border-top: 1px solid lightgray;
+    border-left: 1px dashed lightgray;
+    padding-left: 20px;
   }
-  .descriptionText{
-    position: absolute;
-    top: 25px;
+
+  #usersList{
+    position: static;
+    .userItem{
+      font-size: 14px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      span{
+        display: inline-block;
+      }
+      .avatar{
+        min-width: 64px;
+      }
+      .fullName{
+        min-width: 200px;
+      }
+      .role{
+        left: 200px;
+      }
+    }
+    .user:hover{
+      color: maroon;
+      border-top: 1px solid maroon !important;
+      cursor: pointer;
+    }
+    .header{
+      font-weight: bold;
+    }
+    // overflow-y: scroll;
   }
+
+  .right{
+    float: right;
+    // position: absolute;
+    // top: 0px;
+    // right: 0px;
+  }
+  // .descriptionText{
+  //   position: absolute;
+  //   top: 25px;
+  // }
   .fadeAway{
     height: 10px;
     width: 100%;
