--- a/client/components/userUpsertPage/userUpsertPage.less
+++ b/client/components/userUpsertPage/userUpsertPage.less
@@ -41,6 +41,14 @@
     color: maroon;
     outline: none;
   }
+  input{
+    border-top: 1px solid lightgray;
+    border-left: 1px dashed lightgray;
+    padding-left: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-bottom: 20px;
+  }
   #saveRecordButton{
     position: absolute;
     left: 0px;
