--- a/client/components/userPreviewPage/userPreviewPage.html
+++ b/client/components/userPreviewPage/userPreviewPage.html
@@ -2,7 +2,7 @@
   <div id="userPreviewPage" class="fullheight padded page">
     {{> recordHeader type="record" url="users" spreadsheet=false  imageGrid=false}}
       <div id="userPreviewCard" class="card-contents" style="{{getOpacity}}">
-        <h2 id="userfullNameText">{{profile.name}}</h2>
+        <h2 id="userfullNameText">{{profile.fullName}}</h2>
         <p id="notesText">
           {{description}}
         </p>
